# Open-Day-Robot

./: README.md  database.config.sample  database.db  database.py  functional.py  gui_Early_prototype.py  looksGood.py  main.py  querying.py  question_database.py  questions.csv
TSE/: main.py
TSE/static/css/: styles.css
TSE/static/js/: custom.js
TSE/templates/: error-page.html  home-p1.html  home-p2.html  home-p3.html  results-page.html
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/src/open_day_robot/: CMakeLists.txt  inb.sdf  mover.cpp  package.xml
catkin_ws/src/open_day_robot/src/: .nav_goal.cpp.swp  coordinateListener.cpp  mover.cpp  navGoal.cpp  tiagoMover.cpp
catkin_ws/src/simple_navigation_goals/: CMakeLists.txt
designs/code/class_templates/: Database_class_template.cpp  Querying_class_template.cpp  robotFeatures_class_template.cpp  robotNodes_class_template.cpp
gui/: app.py  bad-words.txt  database.config.template  database.py  main.py  odrobot  querying.py  speech.py
gui/prototype-one/: database.py
gui/prototype-one/routes/: main.py
gui/prototype-two/: querying.py
gui/routes/: main.py
gui/static/css/: styles.css
gui/static/js/: custom.js
gui/templates/: error.html  home-p1.html  index.html  layout.html  likely-questions.html  questions-p1.html  results.html
open_day_robot/: CMakeLists.txt  documentation.txt  package.xml
open_day_robot/src/: mover.cpp  movetest.cpp  persondetection.cpp  tiagopatrol.cpp
open_day_robot/src/INB world files/: INB.world
open_day_robot/src/INB world files/INB map/: map.pgm
open_day_robot_test/: CMakeLists.txt  package.xml
open_day_robot_test/src/: facedetection.cpp  persondetection.cpp
pages/: custom.js  error-page.html  home-p1.html  home-p2.html  home-p3.html  questions-p1.html  results-page.html  styles.css
prototype-one/: __init__.py
prototype-one/gui/: database.py
prototype-one/gui/routes/: main.py
prototype-one/gui/templates/: index.html  layout.html  questions.html  results.html
prototype-one/static/css/: styles.css
prototype-one/static/js/: custom.js
prototype-one/templates/: index.html
prototype-two/: database.py  querying.py
prototype-two/gui/: data.config.template  database.py
prototype-two/gui/templates/: error.html  home.html  layout.html  questions.html
prototype-two/routes/: main.py
prototype-two/static/css/: styles.css
prototype-two/templates/: index.html  likely-questions.html
tiago_openday_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
tiago_openday_ws/logs/aruco/: build.make.000.log.stderr
tiago_openday_ws/logs/controller_manager/: build.make.000.log.stderr
tiago_openday_ws/logs/face_detector/: build.make.000.log.stderr
tiago_openday_ws/logs/gazebo_plugins/: build.cmake.000.log.stderr  build.make.000.log.stderr
tiago_openday_ws/logs/gazebo_ros/: build.cmake.000.log.stderr
tiago_openday_ws/logs/gazebo_ros_control/: build.cmake.001.log.stderr
tiago_openday_ws/logs/open_day_robot/: build.check.002.log.stderr  build.check.016.log.stderr  build.check.018.log.stderr  build.check.071.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  (+50 more)
tiago_openday_ws/src/: .rosinstall  setup.sh
tiago_openday_ws/src/open_day_robot/: CMakeLists.txt  package.xml
tiago_openday_ws/src/open_day_robot/src/: CMakeLists.txt  mover.cpp  movetest.cpp  navGoal.cpp  personDetection.cpp
(+5533 files in other folders)
